--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* custom pagination for swiper */
+.swiper-pagination-custom .swiper-pagination-bullet {
+    background-color: transparent;
+    padding: 5px;
+    border: 2px solid #ED553B; 
+    width: 12px;
+    height: 12px;
+    opacity: 1; /* Ensure bullets are visible */
+    transition: all 0.3s ease;
+  }
+  
+  .swiper-pagination-custom .swiper-pagination-bullet-active {
+    background-color: #ED553B; /* Active dot background color */
+    border-color: #ED553B; /* Active dot border color */
+  }
